# haskell-terrible-filepath-subst

./: README.md  stack.yaml  terrible-filepath-subst.cabal
src/Text/FilePath/: Subst.hs
src/Text/FilePath/Subst/: Impl.hs
test/: Spec.hs  TestUtils.hs
test/Text/FilePath/: SubstTest.hs
