name:                terrible-filepath-subst
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ExpHP/terrible-filepath-subst#readme
license:             MIT
license-file:        LICENSE
author:              Michael Lamparski
maintainer:          diagonaldevice@gmail.com
copyright:           Copyright 2017 Michael Lamparski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.FilePath.Subst
                       Text.FilePath.Subst.Impl
  build-depends:       base >= 4.7 && < 5,
                     , regex >= 0.9.0.0,
                     , text,
                     , mtl
                     , attoparsec,
  default-language:    Haskell2010

test-suite subst-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestUtils
                       Text.FilePath.SubstTest
  build-depends:       base
                     , attoparsec
                     , regex >= 0.9.0.0
                     , terrible-filepath-subst
                     , text
                     , mtl
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExpHP/terrible-filepath-subst
